...
            "state": "translated",
            "value": "Recept"
          }
        }
      }
    },
    "Save": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Guardar"
          }
...
            "state": "translated",
            "value": "Geen stappen vermeld"
          }
        }
      }
    },
    "Edit": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Editar"
          }
...
            "state": "translated",
            "value": "Filteren op tag"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Ajustes"
          }
...
            "state": "translated",
            "value": "Bezig met verwerken"
          }
        }
      }
    },
    "Make Cover": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Usar como portada"
          }
...
            "state": "translated",
            "value": "Instellingen staat in het menu Pocket Chef (⌘,). Daar of in het menu Help kun je deze gids opnieuw openen."
          }
        }
      }
    },
    "Skip": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Omitir"
          }
...
            "state": "translated",
            "value": "Overslaan"
          }
        }
      }
    },
    "Next": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Siguiente"
          }
...
            "state": "translated",
            "value": "Volgende"
          }
        }
      }
    },
    "Get Started": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Empezar"
          }
...
            "state": "translated",
            "value": "Vorige pagina"
          }
        }
      }
    },
    "Next Page": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Página siguiente"
          }
...
            "state": "translated",
            "value": "Help"
          }
        }
      }
    },
    "Show Welcome Guide": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Mostrar la guía de bienvenida"
          }
...
